--- a/mail.html
+++ b/mail.html
@@ -18,12 +18,15 @@
             <p style="font-size: 20px; color: #000000;">Born to Be Fed: comé, cantá, repetí.</p>
         </div>
 
-        <div class="imagenes-container" style="display: flex; flex-wrap: nowrap; justify-content: center;">
-            <div class="imagen" style="width: 50%; padding: 50px;">
-                <img src="hamburguesa-pink.png" alt="Hamburguesa Pink Floyd" style="width: 100%; border-radius: 90px;">
+        <div class="imagenescontenedor" style="display: flex; flex-wrap: nowrap; justify-content: center;">
+            <div class="imagen" style="width: 100%; padding: 50px;">
+                <img src="hamburguesa-pink.png" alt="Hamburguesa Pink Floyd" style="width: 100%; border-radius: 30px;">
             </div>
-            <div class="imagen" style="width: 50%; padding: 50px;">
-                <img src="brownie.png" alt="Brownie Nirvana" style="width: 100%; border-radius: 90px;">
+            <div class="imagen" style="width: 100%; padding: 50px;">
+                <img src="brownie.png" alt="Brownie Nirvana" style="width: 100%; border-radius: 30px;">
+            </div>
+            <div class="imagen" style="width: 100%; padding: 50px;">
+                <img src="cerveza-redondos.png" alt="Cerveza Redondos" style="width: 100%; border-radius: 30px;">
             </div>
         </div>
 
