--- a/anuncio.html
+++ b/anuncio.html
@@ -64,14 +64,14 @@
         }
 
         .cta:hover {
-            background-color: #7a4f00; /* Cambio a un azul más oscuro al pasar el cursor */
+            background-color: #7a4f00; 
         }
 
         @media (max-width: 600px) {
             .ad-container {
                 width: 300px;
                 height: 600px;
-                flex-direction: column; /* Cambio a columna en móviles */
+                flex-direction: column; 
                 align-items: center;
                 text-align: center;
             }
