--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
                 referrerpolicy="no-referrer-when-downgrade">
               </iframe>
             </div>
-        
+        <div class="contenedor-boton">
+  <a href="tu-pagina.html" class="boton-centrado">Ir a la presentacion</a>
+</div>
+
           </div>
 
 </div>
