--- a/presupuesto.html
+++ b/presupuesto.html
@@ -102,6 +102,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 </section>
 
+  <div class="contenedor-boton">
+  <a href="tu-pagina.html" class="boton-centrado">Ir a la página</a>
+</div>
+
+
 <script>
   function MiFuncion() {
     var x = document.getElementById("navegador");
