--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
                   <a href="#"><img src="whatsapp.png" alt="WhatsApp"></a>
                 </div>
               </div>
+                  <a href="https://donaferratoo.github.io/mi-sitio-web/presentacion.html" class="boton-centrado">Ir a la presentacion</a>
             </div>
           
             <div class="footer-bottom">
