--- a/presupuesto.html
+++ b/presupuesto.html
@@ -36,7 +36,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
       <div class="slide">
         <h3>Diseño de Información</h3>
         <p>Investigación y planificación: USD 20 <br>
-          Mapeo del sitio y wireframes: USD 30 <br>
+          Wireframes: USD 30 <br>
           Redacción de contenido: USD 35
         </p>
         <strong>USD 85</strong>
